<resources>
    <string name="app_name">TGT</string>

    <string name="button_get_started">Get Started</string>

    <string name="title_how_to_01">Made By Canada</string>
    <string name="title_how_to_02">CONQUER THE TRAIL</string>
    <string name="title_how_to_03">TRIP PLANNING MADE EASY</string>
    <string name="title_how_to_04">UNDERSTAND THE LANDSCAPE</string>
    <string name="title_how_to_05">TRACK YOUR TREK</string>

    <string name="message_description_how_to_01">This app is a trail guide and trip planner\nfor adventurous people who
        want\nto explore the Trans Canada trail.
    </string>
    <string name="message_description_how_to_03">Planning ahead is effortless with the easy-to use\nsearch tool.
        Shortcuts to nearby points of interest\nmakes finding a trail head or rest stop a breeze.
    </string>

    <string name="message_description_how_to_02">Learning about individual trails is fun and\nengaging. Download trail
        maps for offline use,\nupload your Trail photos or view photos\nsubmitted by adventure seekers like yourself.
    </string>
    <string name="message_description_how_to_04">See how your journey will take shape with the\nmeasure tool and
        calculate the distance you need\nto travel. Peek ahead at the elevation you’ll need\nto climb with the expanded
        elevation profile.
    </string>
    <string name="message_description_how_to_05">Remember every adventure with the Activity\nTracker. Visualize how much
        of the trail you’ve\nconquered and share your journey on all your\nfavourite social networks.
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_map">Map</string>
    <string name="title_measure">Measure</string>
    <string name="title_tracker">Tracker</string>
    <string name="title_archive">Archive</string>
    <string name="title_search">Search</string>
    <string name="title_directions_to_trail">Directions to the Trail</string>
    <string name="title_delete_activity_title"> Delete Activity </string>
    <string name="title_delete_activity_message">Are you sure you want to delete this activity ?</string>
    <string name="title_activity_log">Activity Log</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">About</string>
    <string name="menu_about_keen">About Keen</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_feedback">Help And Feedback</string>
    <string name="menu_offline_map">Offline Maps</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_exit">Exit</string>

    <string name="label_upload_trail">Upload a photo of this Trail</string>
    <string name="label_trail_type">Trail Type</string>
    <string name="label_activities">Activities</string>
    <string name="label_environment">Environment</string>
    <string name="label_other_res">Other Resources</string>
    <string name="label_photo">Photo</string>
    <string name="label_add_caption">Add a caption</string>
    <string name="label_pick_image_intent_text">Choose an image</string>
    <string name="label_distance"> DISTANCE </string>
    <string name="label_elevation"> ELEVATION </string>
    <string name="label_measureMessage">Tap to drop a pin on the trail.</string>
    <string name="label_measureMessage2">Drop another pin on the Trail to measure distance</string>
    <string name="label_drop_pin_note">Tap on the trail precisely or zoom in</string>
    <string name="label_more">MORE </string>
    <string name="label_google_place">Google Place</string>
    <string name="label_google_place_service">Google Place Services</string>
    <string name="label_trail_services">Trail Services</string>
    <string name="label_recent_search">Recent Searches</string>
    <string name="label_trails">Trails</string>
    <string name="label_start"> Start </string>
    <string name="label_activity">Activity</string>
    <string name="label_time"> TIME </string>
    <string name="label_menu"> Menu </string>
    <string name="label_enter_name">Enter name</string>

    <string name="activity_tracker_name">Activity Tracker Name</string>
    <string name="activity_tracker_name_message">Please choose a name for your track.</string>
    <string name="activity_log_message">You have no saved trails.</string>

    <string name="alert_no_internet">No Internet connection</string>
    <string name="alert_must_online_trail">You must be online to view trails</string>
    <string name="alert_clear_measurement_title">Clear Measurement</string>
    <string name="alert_clear_measurement_message">Are you sure you want clear this measurement?</string>
    <string name="alert_delete_activity_confirmation_title">Delete Activity</string>
    <string name="alert_delete_activity_confirmation_message">The activity was  deleted successfully.</string>

    <string name="button_share">Share</string>
    <string name="button_ok"> Ok</string>
    <string name="button_cancel">Cancel</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="pause"> Pause </string>
    <string name="save"> Save </string>
    <string name="delete"> Delete </string>

</resources>
