<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlHowUseOne"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_how_use_bg_01" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_trail_new_logo" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spacing_small"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_trail_sentier_logo" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_how_to_01"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleHowTo"
            style="@style/TextTitleHowToUse"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/title_how_to_01"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:src="@mipmap/ic_divider" />

        <TextView
            android:id="@+id/tvDescriptionHowTo"
            style="@style/TextDescription"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_large"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/message_description_how_to_05"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnGetStarted"
            style="@style/ButtonGetStarted"
            android:layout_width="110dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_small"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/spacing_tiny"
            android:text="@string/button_get_started"
            android:textSize="@dimen/font_tiny" />

    </LinearLayout>

</LinearLayout>