<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/AppTheme.AppBarOverlay">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activityDetailFragmentToolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blueGreen"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:id="@+id/main_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:textAllCaps="false"
                    app:srcCompat="@drawable/ic_arrow_back"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/main_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/shareBtn"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="80dp"
                    android:clickable="true"
                    android:textAllCaps="false"
                    app:srcCompat="@drawable/ic_upload" />


                <ImageView
                    android:id="@+id/deleteBtn"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:clickable="true"
                    android:textAllCaps="false"
                    app:srcCompat="@drawable/ic_trash_white" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Layout 2-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            map:cameraTargetLat="56.1304"
            map:cameraTargetLng="-106.3468" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/location_toggle_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:visibility="gone"
            app:backgroundTint="#FFFFFFFF"
            app:srcCompat="@drawable/ic_my_loc"
            tools:ignore="VectorDrawableCompat" />

    </RelativeLayout>

    <!-- Layout 3  the height of bottom layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="11dp"
        android:orientation="vertical">


        <!-- Layout 5-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:orientation="horizontal"
            android:weightSum="1">


            <!-- Layout 6 Distance-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDistance2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:gravity="center"
                    android:text="0 km"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="19dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-5dp"
                    android:layout_weight="0.40"
                    android:gravity="center"
                    android:text="@string/label_distance"
                    android:textAlignment="center"
                    android:textColor="@color/textGrey"
                    android:textSize="11dp" />

            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="1dp"
                android:background="@color/textGrey" />

            <!-- Layout 7  Time -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:orientation="vertical">


                <Chronometer
                    android:id="@+id/chronometer2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.60"
                    android:gravity="center"
                    android:text="00:00:00"
                    android:textColor="@color/black"
                    android:textSize="19dp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-5dp"
                    android:layout_weight="0.40"
                    android:gravity="center"
                    android:text="@string/label_time"
                    android:textAlignment="center"
                    android:textColor="@color/textGrey"
                    android:textSize="11dp" />

            </LinearLayout>

            <!--Divider-->
            <View
                android:layout_width="0.5dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="1dp"
                android:background="@color/textGrey" />

            <!-- Layout 8 Elevation-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtElevation2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:gravity="center"
                    android:text="0 m"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="19dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-5dp"
                    android:layout_weight="0.40"
                    android:gravity="center"
                    android:text="@string/label_elevation"
                    android:textAlignment="center"
                    android:textColor="@color/textGrey"
                    android:textSize="11dp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>